namespace RecallQ.Api.Embeddings;

public record SummaryRefreshJob(Guid ContactId, Guid OwnerUserId);
